Closed
Bug 332668
Opened 20 years ago
Closed 19 years ago
keyword.enabled probably doesn't work any more
Categories
(SeaMonkey :: UI Design, defect)
SeaMonkey
UI Design
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: neil, Assigned: neil)
References
Details
(Keywords: fixed-seamonkey1.1b, regression)
Attachments
(2 files, 2 obsolete files)
|
3.42 KB,
patch
|
ajschult784
:
review+
jag+mozilla
:
superreview+
csthomas
:
approval-seamonkey1.1a+
|
Details | Diff | Splinter Review |
|
15.12 KB,
patch
|
jag+mozilla
:
review+
jag+mozilla
:
superreview+
iannbugzilla
:
approval-seamonkey1.1b+
|
Details | Diff | Splinter Review |
roc changed the keyword.enabled backend in bug 331522 but we need xpfe changes.
Comment 1•20 years ago
|
||
*** Bug 333426 has been marked as a duplicate of this bug. ***
Comment 2•20 years ago
|
||
*grmbl*
So, shall I just add that flag to all loadURIWithFlags calls, or do we too wanna disable keyword loads for certain cases?
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•20 years ago
|
||
It would be nice if we had a list of all callers, then we could see how easy it would be to selectively apply the flag.
Updated•20 years ago
|
Flags: blocking-seamonkey1.1a?
Keywords: regression
Blocks: 336017
No longer blocks: 336017
| Assignee | ||
Comment 4•20 years ago
|
||
*** Bug 340387 has been marked as a duplicate of this bug. ***
Comment 5•20 years ago
|
||
Does anyone know if there is a workaround to this? This is something I *used* to do all of the time. It's hard to believe more people aren't complaining about this being gone.
Comment 6•19 years ago
|
||
What does this bug mean?
Without seeing what really is broken or not it's hard to decide if we should hold a release (or even an Alpha) for this...
Comment 7•19 years ago
|
||
This means that if you have "Enable Internet Keywords" checked in the preferences that it doesn't work anymore. In other words, if I wanted to search for something, I would simply type it into the location bar and hit return and it would automatically do the search based on what I have set for Internet Search in the preferences.
Comment 8•19 years ago
|
||
Keywords and Internet Search are two different beasts, from what I know, so I'm not sure if you are right.
And if I set a keyword "bug" for %s-based Bugzilla lookup, it works well in a branch build...
Comment 9•19 years ago
|
||
I believe this is keyword.enabled set to true in about:config is what allowed me to search from the url bar with an enter click. It was a much smarter search system than IE has... IE decides to search for every blasted thing that it can't find which sucks when you just mistype a url. Seamonkey would only search with an enter if there was a space in the url bar (indicating it was not a url) or if the format was keyword:search where search was the word being searched for. As I rarely do a one word search it worked beautifully. I had thought I had just messed up my prefs.js as I had had to specify adding that ability expressly and didn't realize it had been regressed intentionally. I for one would really like to see this as a blocker I am constantly getting an error message that the input was not a valid URL (really even getting rid of the error would be better so I didn't have to acknowledge it before hitting the search button would be OK).
Comment 10•19 years ago
|
||
So, if I understand you correctly and this is just about the issue that calling up the default search engine by pressing enter in the URL bar for any string we can't handle with other methods, this is something that would really be great to have (I'd love it as well), but we won't block a release for it.
Flags: blocking-seamonkey1.1a? → blocking-seamonkey1.1a-
Comment 11•19 years ago
|
||
That's up to you guys, but from a general user perspective it's a previously released feature with a configuration option that now doesn't work - a regression.
Re-request blocking for the beta.
Reading the Firefox patch, I suspect we could make the last (new) argument optional, default to false, and that would make the patch a lot smaller.
Comment 14•19 years ago
|
||
I'm still not sure what this really is about and how important this is, so putting it on 1.1b radar.
Flags: blocking-seamonkey1.1b?
Comment 15•19 years ago
|
||
KaiRo: Firefox has seperated searchbox. SeaMonkey has Location Bar with search capability. This search is now broken. (I'm using 1.0.x releases instead 1.1 nightly because this bug.)
Comment 16•19 years ago
|
||
Just to keep things from being confused... The search does work if you click the search button. Previously you could type keyword:searchterm and hit enter (or if you were entering 2 or more terms separated by spaces you could drop the keyword: part... not sure what if anything else caused the keyword to be assumed but it wasn't brain dead like i.e. and try to search for mistyped urls). The search does still work but now it requires using the Search button rather than being able to use the enter key. Here is some information on it http://kb.mozillazine.org/Using_keyword_searches
Comment 17•19 years ago
|
||
That's what confuses me, because I can't remember having that working in 1.0.x - I thought this has been broken since before the SeaMoneky project had been founded.
Comment 18•19 years ago
|
||
To be honest, I am not sure when it broke... I build from Trunk and don't know the corresponding release information. I had thought I had just borked my prefs.js and thought I was setting it back up wrong at first (the part I thought I was setting up wrong I didn't at first realize wouldn't affect the issue I was seeing... I just remembered I had to make a couple of changes to get it to work as I wanted it to originally).
| Assignee | ||
Comment 19•19 years ago
|
||
open location dialog sucks, will fix later
Assignee: jag → neil
Attachment #234669 -
Flags: review?(ajschult)
Comment 20•19 years ago
|
||
Comment on attachment 234669 [details] [diff] [review]
fix urlbar
Patch looks good. I hit bug 349419 with the patch applied, but so does firefox, so I don't think it's our misuse of the API.
Attachment #234669 -
Flags: review?(ajschult) → review+
| Assignee | ||
Updated•19 years ago
|
Attachment #234669 -
Flags: superreview?(jag)
| Assignee | ||
Comment 21•19 years ago
|
||
requires attachment 234669 [details] [diff] [review]
Attachment #234700 -
Flags: review?(ajschult)
Comment 22•19 years ago
|
||
While we probably may not want to halt an alpha for this, breaking the "enter search terms in urlbar and hit enter" feature is definitely a 1.1 blocker, imo.
Comment 23•19 years ago
|
||
Comment on attachment 234700 [details] [diff] [review]
fix open location dialog
>@@ -63,7 +63,7 @@ function editDocument(aDocument)
as long as you're cleaning things up :) editDocument is never called.
>-function editPage(url, launchWindow, delay)
>+function editPage(url)
xpfe's (and toolkit's!) viewsource has a ViewSourceEditPage method that still passes 3 parameters.
OpenURLDialog in xpfe/components/xremote/src/XRemoteService.cpp also needs updating
Are you yanking the delayed open because it's icky or something directly related to this bug?
| Assignee | ||
Comment 24•19 years ago
|
||
(In reply to comment #23)
>>-function editPage(url, launchWindow, delay)
>>+function editPage(url)
>xpfe's (and toolkit's!) viewsource has a ViewSourceEditPage method that still
>passes 3 parameters.
Fixed locally.
>OpenURLDialog in xpfe/components/xremote/src/XRemoteService.cpp also needs
>updating
That sucks. How much do you want to keep OpenURLDialog? It got overlooked when I implemented openurl for suiterunner.
>Are you yanking the delayed open because it's icky or something directly
>related to this bug?
Because it's icky, and I don't really want to have to touch all the functions that it uses to make them keyword-enabled.
Updated•19 years ago
|
Attachment #234669 -
Flags: superreview?(jag) → superreview+
| Assignee | ||
Updated•19 years ago
|
Attachment #234669 -
Flags: approval-seamonkey1.1a?
Comment on attachment 234669 [details] [diff] [review]
fix urlbar
Diffing from xpfe/ has the wonderful result of making the Index: line look like a Firefox patch.
Attachment #234669 -
Flags: approval-seamonkey1.1a? → approval-seamonkey1.1a+
| Assignee | ||
Comment 26•19 years ago
|
||
Attachment #234700 -
Attachment is obsolete: true
Attachment #234992 -
Flags: review?(ajschult)
Attachment #234700 -
Flags: review?(ajschult)
Comment 27•19 years ago
|
||
Comment on attachment 234992 [details] [diff] [review]
addressed review comments
patch: **** malformed patch at line 146: Index: suite/common/openLocation.js
@@ -146,17 +129,12 @@ function editPage(url, launchWindow, del
should be
@@ -146,12 +129,7 @@ function editPage(url, launchWindow, del
?
>+++ xpfe/browser/resources/content/navigator.js 20 Aug 2006 20:35:33 -0000
>+ openDialog("chrome://communicator/content/openLocation.xul", "_blank", "chrome,modal,titlebar", params);
>+ var url = getShortcutOrURI(params.url);
getShortcutOrURI doesn't like null, so this needs to bail early if the user cancels the dialog.
Attachment #234992 -
Flags: review?(ajschult) → review+
| Assignee | ||
Comment 28•19 years ago
|
||
(In reply to comment #27)
>(From update of attachment 234992 [details] [diff] [review])
>patch: **** malformed patch at line 146: Index: suite/common/openLocation.js
>@@ -146,17 +129,12 @@ function editPage(url, launchWindow, del
>should be
>@@ -146,12 +129,7 @@ function editPage(url, launchWindow, del
>?
You should have seen the patch before I cut out all my other junk...
>>+++ xpfe/browser/resources/content/navigator.js 20 Aug 2006 20:35:33 -0000
>>+ openDialog("chrome://communicator/content/openLocation.xul", "_blank", "chrome,modal,titlebar", params);
>>+ var url = getShortcutOrURI(params.url);
>getShortcutOrURI doesn't like null, so this needs to bail early if the user
>cancels the dialog.
I'll make it default to "" instead.
| Assignee | ||
Comment 29•19 years ago
|
||
Attachment #234992 -
Attachment is obsolete: true
Attachment #235062 -
Flags: superreview?(jag)
Updated•19 years ago
|
Attachment #235062 -
Flags: superreview?(jag)
Attachment #235062 -
Flags: superreview+
Attachment #235062 -
Flags: review+
| Assignee | ||
Comment 30•19 years ago
|
||
(In reply to comment #27)
>@@ -146,17 +129,12 @@ function editPage(url, launchWindow, del
>should be
>@@ -146,12 +129,7 @@ function editPage(url, launchWindow, del
Doh, I corrected the 12 to 7 but forgot to correct the 17 to 12 :-[
| Assignee | ||
Comment 31•19 years ago
|
||
Fix checked in.
If anyone wants internet keywords to work anywhere else, please explain your reasoning before reopening this bug, thanks.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•19 years ago
|
Attachment #235062 -
Flags: approval-seamonkey1.1b?
Attachment #235062 -
Flags: approval-seamonkey1.1b? → approval-seamonkey1.1b+
| Assignee | ||
Comment 32•19 years ago
|
||
Fixed on 1.8 branch 2 days ago but I forgot to update the keywords.
Flags: blocking-seamonkey1.1b?
Keywords: fixed-seamonkey1.1b
Comment 33•19 years ago
|
||
Removing delayedOpenTab will probably break lots of extensions. Actually, there is even one occasion where SeaMonkey itself still tries to use this function - gTabOpenObserver.observe() in navigator.js. This should be fixed.
Comment 34•19 years ago
|
||
V/fixed.
Seamonkey 1.1.2, macosx10.4.
Status: RESOLVED → VERIFIED
QA Contact: benc
See Also: → https://launchpad.net/bugs/56610
You need to log in
before you can comment on or make changes to this bug.
Description
•