Re-enable internet keyword search in the openLocation dialog too and also give it a long-overdue overhaul b=332668 r=ajschult sr=jag