suite/common/openLocation.js
@@ -41,7 +41,6 @@
 
 var browser;
 var dialog = {};
-var gNavigatorBundle;
 var pref = null;
 try {
   pref = Components.classes["@mozilla.org/preferences-service;1"]
@@ -58,10 +57,8 @@ function onLoad()
   dialog.openTopWindow  = document.getElementById("currentWindow");
   dialog.openEditWindow = document.getElementById("editWindow");
   dialog.bundle         = document.getElementById("openLocationBundle");
-  gNavigatorBundle      = document.getElementById("navigatorBundle");
 
-  if ("arguments" in window && window.arguments.length >= 1)
-    browser = window.arguments[0];
+  browser = window.arguments[0].browser;
    
   if (!browser) {
     // No browser supplied - we are calling from Composer
@@ -86,10 +83,7 @@ function onLoad()
 
   if (pref) {
     try {
-      var value = pref.getIntPref("general.open_location.last_window_choice");
-      var element = dialog.openAppList.getElementsByAttribute("value", value)[0];
-      if (element)
-        dialog.openAppList.selectedItem = element;
+      dialog.openAppList.value = pref.getIntPref("general.open_location.last_window_choice");
       dialog.input.value = pref.getComplexValue("general.open_location.last_url",
                                                 Components.interfaces.nsISupportsString).data;
     }
@@ -109,36 +103,11 @@ function doEnabling()
 
 function open()
 {
-  var url;
-  if (browser)
-    url = browser.getShortcutOrURI(dialog.input.value);
-  else
-    url = dialog.input.value;
-
-  try {
-    switch (dialog.openAppList.value) {
-      case "0":
-        browser.loadURI(url);
-        break;
-      case "1":
-        window.opener.delayedOpenWindow(getBrowserURL(), "all,dialog=no", url);
-        break;
-      case "2":
-        // editPage is in editorApplicationOverlay.js 
-        // 3rd param tells editPage to use "delayedOpenWindow"
-        if ("editPage" in window.opener)
-          window.opener.editPage(url, window.opener, true);
-        break;
-      case "3":
-        if (browser.getBrowser && browser.getBrowser().localName == "tabbrowser")
-          browser.delayedOpenTab(url);
-        else
-          browser.loadURI(url); // Just do a normal load.
-        break;
-    }
-  }
-  catch(exception) {
-  }
+  var params = window.arguments[0];
+  params.url = dialog.input.value;
+  params.action = dialog.openAppList.value;
+  if (!browser && params.action != "2")
+    params.action = "1";
 
   if (pref) {
     var str = Components.classes["@mozilla.org/supports-string;1"]
@@ -148,16 +117,6 @@ function open()
                          Components.interfaces.nsISupportsString, str);
     pref.setIntPref("general.open_location.last_window_choice", dialog.openAppList.value);
   }
-
-  // Delay closing slightly to avoid timing bug on Linux.
-  window.close();
-  return false;
-}
-
-function createInstance(contractid, iidName)
-{
-  var iid = Components.interfaces[iidName];
-  return Components.classes[contractid].createInstance(iid);
 }
 
 const nsIFilePicker = Components.interfaces.nsIFilePicker;
